// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Desktop MainTitle renders 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MainTitle
    desktop={true}
    title="Test Title"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Header
        as="h1"
        size="huge"
        textAlign="center"
>
        <ReactRevealText
                className=""
                delayMax={1200}
                delayMin={200}
                show={false}
                style={
                        Object {
                                "color": "black",
                                "fontSize": "35px",
                                "letterSpacing": "0.7em",
                                "lineHeight": "36px",
                              }
                }
                text=""
                threshold={0.2}
                timingFunction="linear"
                transitionTime={500}
        >
                Test Title
        </ReactRevealText>
</Header>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "as": "h1",
        "children": <ReactRevealText
          className=""
          delayMax={1200}
          delayMin={200}
          show={false}
          style={
                    Object {
                              "color": "black",
                              "fontSize": "35px",
                              "letterSpacing": "0.7em",
                              "lineHeight": "36px",
                            }
          }
          text=""
          threshold={0.2}
          timingFunction="linear"
          transitionTime={500}
>
          Test Title
</ReactRevealText>,
        "size": "huge",
        "textAlign": "center",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Test Title",
          "className": "",
          "delayMax": 1200,
          "delayMin": 200,
          "show": false,
          "style": Object {
            "color": "black",
            "fontSize": "35px",
            "letterSpacing": "0.7em",
            "lineHeight": "36px",
          },
          "text": "",
          "threshold": 0.2,
          "timingFunction": "linear",
          "transitionTime": 500,
        },
        "ref": null,
        "rendered": "Test Title",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Header
          as="h1"
          size="huge"
          textAlign="center"
>
          <ReactRevealText
                    className=""
                    delayMax={1200}
                    delayMin={200}
                    show={false}
                    style={
                              Object {
                                        "color": "black",
                                        "fontSize": "35px",
                                        "letterSpacing": "0.7em",
                                        "lineHeight": "36px",
                                      }
                    }
                    text=""
                    threshold={0.2}
                    timingFunction="linear"
                    transitionTime={500}
          >
                    Test Title
          </ReactRevealText>
</Header>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "as": "h1",
          "children": <ReactRevealText
            className=""
            delayMax={1200}
            delayMin={200}
            show={false}
            style={
                        Object {
                                    "color": "black",
                                    "fontSize": "35px",
                                    "letterSpacing": "0.7em",
                                    "lineHeight": "36px",
                                  }
            }
            text=""
            threshold={0.2}
            timingFunction="linear"
            transitionTime={500}
>
            Test Title
</ReactRevealText>,
          "size": "huge",
          "textAlign": "center",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Test Title",
            "className": "",
            "delayMax": 1200,
            "delayMin": 200,
            "show": false,
            "style": Object {
              "color": "black",
              "fontSize": "35px",
              "letterSpacing": "0.7em",
              "lineHeight": "36px",
            },
            "text": "",
            "threshold": 0.2,
            "timingFunction": "linear",
            "transitionTime": 500,
          },
          "ref": null,
          "rendered": "Test Title",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`MainTitle renders 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MainTitle
    title="Test Title"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Header
        as="h1"
        size="huge"
        textAlign="center"
>
        <ReactRevealText
                className=""
                delayMax={1200}
                delayMin={200}
                show={false}
                style={
                        Object {
                                "color": "FloralWhite",
                                "fontSize": "35px",
                                "letterSpacing": "0.5em",
                                "lineHeight": "36px",
                              }
                }
                text=""
                threshold={0.2}
                timingFunction="linear"
                transitionTime={500}
        >
                Test Title
        </ReactRevealText>
</Header>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "as": "h1",
        "children": <ReactRevealText
          className=""
          delayMax={1200}
          delayMin={200}
          show={false}
          style={
                    Object {
                              "color": "FloralWhite",
                              "fontSize": "35px",
                              "letterSpacing": "0.5em",
                              "lineHeight": "36px",
                            }
          }
          text=""
          threshold={0.2}
          timingFunction="linear"
          transitionTime={500}
>
          Test Title
</ReactRevealText>,
        "size": "huge",
        "textAlign": "center",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Test Title",
          "className": "",
          "delayMax": 1200,
          "delayMin": 200,
          "show": false,
          "style": Object {
            "color": "FloralWhite",
            "fontSize": "35px",
            "letterSpacing": "0.5em",
            "lineHeight": "36px",
          },
          "text": "",
          "threshold": 0.2,
          "timingFunction": "linear",
          "transitionTime": 500,
        },
        "ref": null,
        "rendered": "Test Title",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Header
          as="h1"
          size="huge"
          textAlign="center"
>
          <ReactRevealText
                    className=""
                    delayMax={1200}
                    delayMin={200}
                    show={false}
                    style={
                              Object {
                                        "color": "FloralWhite",
                                        "fontSize": "35px",
                                        "letterSpacing": "0.5em",
                                        "lineHeight": "36px",
                                      }
                    }
                    text=""
                    threshold={0.2}
                    timingFunction="linear"
                    transitionTime={500}
          >
                    Test Title
          </ReactRevealText>
</Header>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "as": "h1",
          "children": <ReactRevealText
            className=""
            delayMax={1200}
            delayMin={200}
            show={false}
            style={
                        Object {
                                    "color": "FloralWhite",
                                    "fontSize": "35px",
                                    "letterSpacing": "0.5em",
                                    "lineHeight": "36px",
                                  }
            }
            text=""
            threshold={0.2}
            timingFunction="linear"
            transitionTime={500}
>
            Test Title
</ReactRevealText>,
          "size": "huge",
          "textAlign": "center",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Test Title",
            "className": "",
            "delayMax": 1200,
            "delayMin": 200,
            "show": false,
            "style": Object {
              "color": "FloralWhite",
              "fontSize": "35px",
              "letterSpacing": "0.5em",
              "lineHeight": "36px",
            },
            "text": "",
            "threshold": 0.2,
            "timingFunction": "linear",
            "transitionTime": 500,
          },
          "ref": null,
          "rendered": "Test Title",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
